--- a/noteflix/.env
+++ b/noteflix/.env
@@ -1,1 +1,5 @@
-VITE_APPWRITE_URL="test envionment"
+VITE_APPWRITE_URL="https://cloud.appwrite.io/v1"
+VITE_APPWRITE_PROJECT_ID="6604f571de629c0882e2"
+VITE_APPWRITE_DATABASE_ID="6604fcfe3601002e3799"
+VITE_APPWRITE_COLLECTION_ID="6604fd24aafe7207583d"
+VITE_APPWRITE_BUCKET_ID="66051019357e025b80f6"
